--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,7 @@
 
 [profile.default]
 solc_version = "0.8.17"
-#evm_version = "cancun"
+evm_version = "cancun"
 optimizer = true
 optimizer_runs = 200
 libs = ["dependencies"]
