feat: foundry configuration (#2)
* refactor: add ethereum core contracts

* refactor: ethereum contracts

* refactor: add rewardManager and Autoswapper ethereum

* refactor: fix import path

* refactor: add L2 contracts

* refactor: autoswapper L2

* refactor: rework autoswapper ethereum

* refactor: add arbitrum contracts

* refactor: cleanup

* refactor: remove deploy folder

* ci: update ci to not run tests anymore

* docs: update README.md

* feat: use foundry instead of hardhat

* fix: package json

* ci: remove yarn

* ci: remove npm ci

* fix: uncomment evm_version

* fix: rework IERC20Permit import

* chore: update gitignore

* refactor: rework imports

--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,6 @@ typings/
 
 # Optional npm cache directory
 .npm
-package-lock.json
 
 # Optional eslint cache
 .eslintcache
@@ -137,3 +136,7 @@ script/*.ps1
 # dev shell cache
 .devenv
 .direnv
+
+# foundry
+dependencies
+out
