--- a/.soldeerignore
+++ b/.soldeerignore
@@ -1,11 +1,11 @@
 *
-!src/
-!src/*
-!src/*/
-!src/*/*
-!src/*/*/
-!src/*/*/*
-!src/*/*/*/
-!src/*/*/*/*
+!contracts/
+!contracts/*
+!contracts/*/
+!contracts/*/*
+!contracts/*/*/
+!contracts/*/*/*
+!contracts/*/*/*/
+!contracts/*/*/*/*
 !foundry.toml
 !soldeer.lock
