--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "files": [
     "dist",
-    "src/**/*",
+    "contracts/**/*",
     "foundry.toml",
     "soldeer.lock",
     "README.md"
